# diablo

./: .gitignore  .graphify_chunk1.txt  .graphify_chunk2.txt  .graphify_chunk3.txt  AGENTS.md  DESIGN.md  PLAN.md  README.md  SUMMARY.md  UI.md  package.json  phase-5.md
app/: index.html  package-lock.json  package.json  vite.config.mjs  vite.config.ts
app/src/: App.tsx  config.ts  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs  test_lsp.rs
app/src-tauri/src/commands/: fs.rs  git.rs  index.rs  install.rs  lsp.rs  mod.rs  pty.rs  search.rs  workspace.rs
app/src-tauri/src/indexer/: chunker.rs  mod.rs  store.rs  watcher.rs
app/src-tauri/src/lsp/: bridge.rs  manager.rs  mod.rs
app/src/agent/: applyParser.ts  context.ts
app/src/editor/: CodeMirrorEditor.tsx  MonacoEditor.tsx  language.ts  lspClient.ts  monacoEnv.ts
app/src/layout/: Breadcrumb.tsx  MenuBar.tsx  StatusBar.tsx  TabBar.tsx
app/src/panels/: ChatPanel.tsx  DiffReview.tsx  FileExplorer.tsx  GitPanel.tsx  SearchPanel.tsx  Terminal.tsx  TerminalPane.tsx
app/src/store/: agent.ts  editor.ts  git.ts  index.ts
app/src/ui/: primitives.tsx
dashboard/: .env  PLAN.md  package-lock.json  package.json
dashboard/app/: layout.tsx
dashboard/app/dashboard/: page.tsx
dashboard/app/keys/: KeysClient.tsx  actions.ts  page.tsx
dashboard/components/: Nav.tsx
dashboard/lib/: api.ts
gateway/: .dev.vars  package-lock.json  package.json  plan.md  wrangler.toml
gateway/src/: index.ts  keys.ts  models.ts  types.ts  usage.ts
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
(+24 files in other folders)
