[package]
name = "diablo"
version = "0.1.0"
edition = "2021"

[lib]
name = "diablo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "diablo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify = { version = "6", features = ["macos_fsevent"] }
walkdir = "2"
ignore = "0.4"

[features]
test-lsp = []
