[package]
name = "diablo"
version = "0.1.0"
edition = "2021"

[lib]
name = "diablo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "diablo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify = { version = "6", features = ["macos_fsevent"] }
walkdir = "2"
ignore = "0.4"
portable-pty = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"

[features]
test-lsp = []
